# codiac-puzzles

./: README.md  Untitled-1.py  get_random_puzzle.py  main.py  pyproject.toml  save-old-as-new.ipynb
.github/workflows/: main.yml
codiac_sandbox/: __init__.py  hint_types.py  puzzle_types.py  quote_types.py
codiac_sandbox/crud/: create.py  delete.py
codiac_sandbox/gui/: __init__.py  date_selector_widget.py  new_puzzle_modal.py  view_puzzles.py
codiac_sandbox/selection/: save_as_date.py
codiac_sandbox/utils/: make_letter_map.py  puzzle_classes.py
resources/: icon-list.json  master-puzzle-list.json  mega-puzzle-list.json  old-puzzle-list.json  test.json  tutorial.json
resources/auto-generated/: 20250708.json  20250709.json  20250711.json  20250712.json  20250713.json  20250714.json  20250715.json  20250716.json  20250717.json  20250718.json  20250719.json  20250720.json  20250721.json  20250722.json  20250723.json  20250724.json  20250725.json  20250726.json  20250727.json  20250728.json  20250729.json  20250730.json  20250731.json  20250801.json  20250802.json
resources/by-date/: 20250712.json  20250713.json  20250714.json
