[project]
name = "codiac-puzzles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "pandas>=2.3.0",
    "pyside6>=6.9.1",
]
